--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 dash==2.16.1
-dash-bootstrap-components==1.6.0
+dash-bootstrap-components==1.5.0
 plotly==5.22.0
-numpy==1.26.4
 pandas==2.2.2
-scikit-learn==1.5.0
+numpy==1.26.4
+scikit-learn==1.4.2
 yfinance==0.2.40
+gunicorn==21.2.0
+
